test/e2e/yaml/async-processor-pubsub.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: async-processor-pubsub
  namespace: e2e-test
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: async-processor-pubsub-auth-delegator
subjects:
  - kind: ServiceAccount
    name: async-processor-pubsub
    namespace: e2e-test
roleRef:
  kind: ClusterRole
  name: system:auth-delegator
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: async-processor-pubsub
  namespace: e2e-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: async-processor-pubsub
  template:
    metadata:
      labels:
        app: async-processor-pubsub
    spec:
      serviceAccountName: async-processor-pubsub
      containers:
        - name: async-processor
          image: ${AP_IMAGE}
          imagePullPolicy: Never
          env:
            - name: PUBSUB_EMULATOR_HOST
              value: pubsub-emulator.e2e-test.svc.cluster.local:8085
          args:
            - "--message-queue-impl=gcp-pubsub"
            - "--pubsub.igw-base-url=http://igw-mock.e2e-test.svc.cluster.local:80"
            - "--pubsub.project-id=test-project"
            - "--pubsub.request-subscriber-id=request-sub"
            - "--pubsub.result-topic-id=result-topic"
            - "--metrics-endpoint-auth=false"
            - "--concurrency=1"
