test/e2e/yaml/async-processor-quota.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: async-processor-quota
  namespace: e2e-test
  labels:
    app: async-processor-quota
spec:
  replicas: 1
  selector:
    matchLabels:
      app: async-processor-quota
  template:
    metadata:
      labels:
        app: async-processor-quota
    spec:
      serviceAccountName: async-processor
      containers:
      - name: async-processor
        image: ${AP_IMAGE}
        imagePullPolicy: IfNotPresent
        args:
        - --transport=redis-sortedset
        - --transport-config={"url":"redis://redis.e2e-test.svc.cluster.local:6379","queues":[{"queue_name":"quota-request-sortedset","igw_base_url":"http://igw-mock.e2e-test.svc.cluster.local:80","request_path_url":"/v1/completions","gate_type":"redis-quota","gate_params":{"address":"redis.e2e-test.svc.cluster.local:6379","attribute":"userid","mode":"concurrency","limit":"1"}}]}
        - --metrics-endpoint-auth=false
