test/e2e/yaml/async-processor.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: async-processor
  namespace: e2e-test
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: async-processor-auth-delegator
subjects:
  - kind: ServiceAccount
    name: async-processor
    namespace: e2e-test
roleRef:
  kind: ClusterRole
  name: system:auth-delegator
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: async-processor
  namespace: e2e-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: async-processor
  template:
    metadata:
      labels:
        app: async-processor
    spec:
      serviceAccountName: async-processor
      containers:
        - name: async-processor
          image: ${AP_IMAGE}
          imagePullPolicy: Never
          args:
            - "--message-queue-impl=redis-sortedset"
            - "--redis.ss.igw-base-url=http://igw-mock.e2e-test.svc.cluster.local:80"
            - "--redis.addr=redis.e2e-test.svc.cluster.local:6379"
            - "--redis.ss.poll-interval-ms=500"
            - "--redis.ss.batch-size=10"
            - "--concurrency=1"
            - "--redis.ss.gate-type=redis"
            - "--redis.ss.gate-params={\"address\":\"redis.e2e-test.svc.cluster.local:6379\"}"
