test/e2e/yaml/gcs-mock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcs-mock
  namespace: e2e-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcs-mock
  template:
    metadata:
      labels:
        app: gcs-mock
    spec:
      containers:
        - name: gcs-mock
          image: fsouza/fake-gcs-server:latest
          imagePullPolicy: IfNotPresent
          args:
            - "-scheme"
            - "http"
            - "-port"
            - "4443"
            - "-public-host"
            - "gcs-mock.e2e-test.svc.cluster.local:80"
          ports:
            - containerPort: 4443
          readinessProbe:
            httpGet:
              path: /_internal/healthcheck
              port: 4443
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: gcs-mock
  namespace: e2e-test
spec:
  type: NodePort
  selector:
    app: gcs-mock
  ports:
    - port: 80
      targetPort: 4443
      nodePort: 30443
