test/e2e/yaml/jaeger.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: ${NAMESPACE}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.76.0
          ports:
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 16686
              name: query
          env:
            - name: COLLECTOR_OTLP_ENABLED
              value: "true"
          readinessProbe:
            httpGet:
              path: /
              port: 16686
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: ${NAMESPACE}
spec:
  type: NodePort
  selector:
    app: jaeger
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: query
      port: 16686
      targetPort: 16686
      nodePort: 30494
