test/e2e/yaml/prom-mock.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prom-mock
  namespace: e2e-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prom-mock
  template:
    metadata:
      labels:
        app: prom-mock
    spec:
      containers:
        - name: prom-mock
          image: e2e-prom-mock:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9090
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: prom-mock
  namespace: e2e-test
spec:
  selector:
    app: prom-mock
  ports:
    - port: 9090
      targetPort: 9090
      name: http
    - port: 9091
      targetPort: 9090
      nodePort: 30091
      name: admin
  type: NodePort
