test/e2e/yaml/pubsub-emulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubsub-emulator
  namespace: e2e-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pubsub-emulator
  template:
    metadata:
      labels:
        app: pubsub-emulator
    spec:
      containers:
        - name: pubsub-emulator
          image: gcr.io/google.com/cloudsdktool/cloud-sdk:emulators
          command:
            - gcloud
            - beta
            - emulators
            - pubsub
            - start
            - --host-port=0.0.0.0:8085
          ports:
            - containerPort: 8085
          readinessProbe:
            tcpSocket:
              port: 8085
            initialDelaySeconds: 5
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: pubsub-emulator
  namespace: e2e-test
spec:
  type: NodePort
  selector:
    app: pubsub-emulator
  ports:
    - port: 8085
      targetPort: 8085
      nodePort: 30850
